--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -90,6 +90,10 @@ select.ng-invalid:not(form) {
     margin-top: 30px;
 }
 
+.full-width {
+    width: 100%;
+}
+
 .break {
     white-space: normal;
     word-break: break-all;
