fixed created date issue

--- a/src/main/webapp/app/entities/core/post/post.component.html
+++ b/src/main/webapp/app/entities/core/post/post.component.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="actions-wrap">
                         <div>
-                            <p class="created-at">Apr 21, 2019, 8:14:24 PM</p>
+                            <p class="created-at">{{post.createdDate | date:'medium'}}</p>
                         </div>
                         <div class="actions">
                             <div>
