--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -278,3 +278,172 @@ $theme: mat-light-theme($palette, $palette);
 }
 
 /* Quill Editor CSS ends */
+
+/* Custom list view CSS */
+$card-height: 200px;
+$image-wrap-width: 250px;
+$other-detail-width: 250px;
+$link-font-color: #4a90e2;
+$grey-font-color: #808080;
+$black-font-color: #151515;
+$sm-font-size: 14px;
+$xs-sm-font-size: 12px;
+.custom-list-view {
+    width: 100%;
+    .acttion-bar-wrap {
+        display: flex;
+        justify-content: flex-end;
+        background-color: white;
+        padding: 5px;
+        margin: 10px 0px;
+        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
+        .sort-button {
+            position: relative;
+            margin-right: 70px;
+            cursor: pointer;
+            &:after {
+                position: absolute;
+                content: '';
+                width: 10px;
+                height: 10px;
+                border: solid;
+                border-width: 2px 2px 0 0;
+                border-color: grey;
+                top: 4px;
+                right: -24px;
+                transform: rotate(135deg);
+                -webkit-transition: 0.3s; /* Safari */
+                transition: 0.3s;
+            }
+            &.up:after {
+                top: 10px;
+                transform: rotate(-45deg);
+            }
+            ul {
+                list-style: none;
+                position: absolute;
+                margin: 0px;
+                background: white;
+                top: 30px;
+                right: -30px;
+                font-size: 14px;
+                padding: 0px;
+                min-width: 160px;
+                text-align: left;
+                border: 1px solid rgba(0, 0, 0, 0.15);
+                -webkit-border-radius: 4px;
+                -moz-border-radius: 4px;
+                border-radius: 4px;
+                -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+                -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+                box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+                li {
+                    padding: 6px 20px;
+                    cursor: pointer;
+                    &:hover {
+                        background: #f5f5f5;
+                    }
+                }
+            }
+        }
+    }
+    .content-block-wrap {
+        .content-block {
+            background-color: white;
+            padding: 5px;
+            margin: 10px 0px;
+            box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
+            display: flex;
+            justify-content: space-between;
+            .image-wrap {
+                margin-right: 15px;
+                max-height: $card-height;
+                width: #{$image-wrap-width};
+                overflow: hidden;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                img {
+                    max-height: 100%;
+                }
+            }
+            .main-content {
+                height: 100%;
+                width: calc(100% - #{$image-wrap-width + $other-detail-width});
+                padding: 10px;
+                h2 {
+                    line-height: 1.5rem;
+                    max-height: 3rem;
+                    overflow: hidden;
+                    font-size: 22px;
+                    font-weight: 500;
+                    color: #{$link-font-color};
+                    cursor: pointer;
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+                p {
+                    max-height: 15rem;
+                    line-height: 1.5rem;
+                    overflow: hidden;
+                }
+            }
+            .other-detail {
+                padding: 10px;
+                width: #{$other-detail-width};
+                display: flex;
+                flex-flow: column;
+                justify-content: space-between;
+                .author-details-wrap {
+                    display: flex;
+                    .name-icon {
+                        font-size: 30px;
+                        height: 50px;
+                        width: 50px;
+                        background-color: #2121c7;
+                        border-radius: 25px;
+                        color: white;
+                        font-weight: 600;
+                        text-align: center;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin-right: 15px;
+                        p {
+                            margin: 0px;
+                        }
+                    }
+                    p {
+                        margin-bottom: 5px;
+                    }
+                    .author-details-text {
+                        .created-by {
+                            color: #{$grey-font-color};
+                            font-size: #{$sm-font-size};
+                            margin-bottom: 0px;
+                        }
+                        .status {
+                            color: red;
+                            font-weight: 400;
+                        }
+                        .author-name {
+                            color: #{$black-font-color};
+                        }
+                    }
+                }
+                .actions-wrap {
+                    .created-at {
+                        font-size: #{$xs-sm-font-size};
+                    }
+                    .actions {
+                        display: flex;
+                        > div {
+                            padding: 5px 12px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
