added auto resize directive for textarea

--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -43,6 +43,7 @@
                 <mat-form-field class="full-width margin-t-30">
                     <textarea matInput
                               formControlName="excerpt"
+                              [cdkTextareaAutosize]="true"
                               placeholder="Excerpt">
                     </textarea>
                 </mat-form-field>
@@ -235,6 +236,7 @@
                                 <mat-form-field class="full-width">
                                     <textarea matInput
                                               formControlName="updates"
+                                              [cdkTextareaAutosize]="true"
                                               placeholder="Updates">
                                     </textarea>
                                 </mat-form-field>
