--- a/src/main/webapp/app/entities/core/tag/tag-update.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag-update.component.html
@@ -1,18 +1,25 @@
-<div class="row justify-content-center">
-    <div class="col-8">
+<div class="row justify-content-center padding-40-0">
+    <div class="col-8 padding-20 white-bc box-shadow-2">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-            <h2 id="jhi-tag-heading" jhiTranslate="gatewayApp.coreTag.home.createOrEditLabel">Create or edit a Tag</h2>
+            <h2 class="font-sz-20" id="jhi-tag-heading" jhiTranslate="gatewayApp.coreTag.home.createOrEditLabel">Create or edit a Tag</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
-                <div class="form-group" [hidden]="!tag.id">
-                    <label for="id" jhiTranslate="global.field.id">ID</label>
-                    <input type="text" class="form-control" id="id" name="id"
-                        [(ngModel)]="tag.id" readonly />
-                </div>
+                <!--<div class="form-group" [hidden]="!tag.id">-->
+                    <!--<label for="id" jhiTranslate="global.field.id">ID</label>-->
+                    <!--<input type="text" class="form-control" id="id" name="id"-->
+                        <!--[(ngModel)]="tag.id" readonly />-->
+                <!--</div>-->
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreTag.name" for="field_name">Name</label>
-                    <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="tag.name" required/>
+                    <mat-form-field class="full-width">
+                        <input type="text" name="name" id="field_name"
+                               placeholder="Name"
+                               matInput
+                               [(ngModel)]="tag.name" required/>
+                        <mat-error>
+                            Name is <strong>required</strong>
+                        </mat-error>
+                    </mat-form-field>
+
                     <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
@@ -32,9 +39,10 @@
                     </div>
                 </div>-->
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreTag.description" for="field_description">Description</label>
-                    <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
-                              [(ngModel)]="tag.description" ></textarea>
+                    <mat-form-field class="full-width">
+                        <textarea matInput rows="5" type="text" name="description" id="field_description"
+                                  [(ngModel)]="tag.description" placeholder="Description"></textarea>
+                    </mat-form-field>
                 </div>
                 <!--<div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreTag.clientId" for="field_clientId">Client Id</label>
@@ -84,10 +92,12 @@
 -->
             </div>
             <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+                <button type="button" mat-button mat-raised-button color="warn"
+                        id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
+                <button type="submit" mat-button mat-raised-button
+                        id="save-entity" [disabled]="editForm.form.invalid || isSaving">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
                 </button>
             </div>
