--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -13,7 +13,7 @@ h4 {
 }
 
 a {
-    color: #533f03;
+    color: #73818f;
     font-weight: bold;
 }
 
@@ -39,15 +39,15 @@ Generic styles
 ========================================================================== */
 
 /* Error highlight on input fields */
-.ng-valid[required],
-.ng-valid.required {
-    border-left: 5px solid green;
-}
+//.ng-valid[required],
+//.ng-valid.required {
+//    border-left: 5px solid green;
+//}
 
-input.ng-invalid:not(form),
-select.ng-invalid:not(form) {
-    border-left: 5px solid red;
-}
+//input.ng-invalid:not(form),
+//select.ng-invalid:not(form) {
+//    border-left: 5px solid red;
+//}
 
 /* other generic styles */
 
@@ -60,6 +60,13 @@ select.ng-invalid:not(form) {
 .error {
     color: white;
     background-color: red;
+}
+
+.white-bc {
+    background-color: white;
+}
+.white {
+    color: white;
 }
 
 .pad {
@@ -81,7 +88,9 @@ select.ng-invalid:not(form) {
 .w-60 {
     width: 60% !important;
 }
-
+margin-20 {
+    margin: 20px;
+}
 .margin-t-20 {
     margin-top: 20px;
 }
@@ -89,9 +98,64 @@ select.ng-invalid:not(form) {
 .margin-t-30 {
     margin-top: 30px;
 }
+.margin-b-30 {
+    margin-bottom: 30px;
+}
+
+.margin-r-10 {
+    margin-right: 10px;
+}
+
+.padding-20 {
+    padding: 20px;
+}
+.padding-0-20 {
+    padding: 0 20px;
+}
+
+.padding-40-0 {
+    padding: 40px 0;
+}
+
+.font-sz-20 {
+    font-size: 20px;
+}
 
 .full-width {
     width: 100%;
+}
+
+.box-shadow-2 {
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
+}
+.box-shadow-5 {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.shadow-table {
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.action-button-container {
+    display: flex;
+    justify-content: flex-start;
+    > div {
+        margin: 0 10px;
+    }
+    > div:first-child {
+        margin-left: 0px;
+    }
+    > div:last-child {
+        margin-right: 0px;
+    }
+}
+
+.alternate-color {
+    tr:nth-child(even) {
+        background-color: rgba(242, 242, 242, 0.5);
+    }
 }
 
 .break {
@@ -105,7 +169,6 @@ select.ng-invalid:not(form) {
 }
 
 .footer {
-    border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .hand,
