--- a/src/main/webapp/app/entities/core/tag/tag.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag.component.html
@@ -32,22 +32,22 @@
             </form>
         </div>
     </div>
-    <div class="table-responsive col-md-12" *ngIf="tags">
+    <div class="table-responsive col-md-12" *ngIf="tags" jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
         <table mat-table [dataSource]="tags" class="mat-elevation-z8 shadow-table full-width alternate-color box-shadow-2">
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <th jhiSortBy="name" mat-header-cell *matHeaderCellDef> <span jhiTranslate="gatewayApp.coreTag.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon> </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="slug">
-                <th mat-header-cell *matHeaderCellDef> Slug </th>
+                <th jhiSortBy="slug" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.coreTag.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
                 <td mat-cell *matCellDef="let element"> {{element.slug}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Description </th>
-                <td mat-cell *matCellDef="let element"> {{element.slug}} </td>
+                <th jhiSortBy="description" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.coreTag.description">Description</span><fa-icon [icon]="'sort'"></fa-icon> </th>
+                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
             <ng-container matColumnDef="createdDate">
-                <th mat-header-cell *matHeaderCellDef> Created Date </th>
+                <th jhiSortBy="createdDate" mat-header-cell *matHeaderCellDef> <span jhiTranslate="gatewayApp.coreTag.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon> </th>
                 <td mat-cell *matCellDef="let element"> {{element.createdDate | date:'medium'}} </td>
             </ng-container>
             <ng-container matColumnDef="actions">
@@ -56,17 +56,14 @@
                     <div class="action-button-container">
                         <div [routerLink]="['/tag', element.id, 'view' ]">
                             <fa-icon [icon]="'eye'"></fa-icon>
-                            <!--<span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>-->
                         </div>
                         <div [routerLink]="['/tag', element.id, 'edit']">
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <!--<span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>-->
                         </div>
                         <div [routerLink]="['/', { outlets: { popup: 'tag/'+ element.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge">
                             <fa-icon [icon]="'times'"></fa-icon>
-                            <!--<span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>-->
                         </div>
                     </div>
                 </td>
