--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.css
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.css
@@ -1,7 +1,7 @@
 .example-list {
     width: 100%;
     max-width: 100%;
-    border: solid 1px #ccc;
+    /*border: solid 1px #ccc;*/
     min-height: 60px;
     display: block;
     background: white;
@@ -10,17 +10,8 @@
 }
 
 .example-box {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
-    font-size: 14px;
 }
 
 .cdk-drag-preview {
