--- a/src/main/webapp/app/entities/core/tag/tag.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag.component.html
@@ -1,133 +1,105 @@
-<div class="padding-20">
-    <h2 id="page-heading font-sz-20">
-        <span jhiTranslate="gatewayApp.coreTag.home.title">Tags</span>
-        <button mat-button mat-raised-button color="primary"
-            id="jh-create-entity" class="float-right jh-create-entity create-tag" [routerLink]="['/tag/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreTag.home.createLabel">
+<div class="table-view-page p-2">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 id="page-heading font-sz-20">
+                <span jhiTranslate="gatewayApp.coreTag.home.title">Tags</span>
+                <button mat-button mat-raised-button color="primary"
+                        id="jh-create-entity" class="float-right jh-create-entity create-tag"
+                        [routerLink]="['/tag/new']">
+                    <fa-icon [icon]="'plus'"></fa-icon>
+                    <span class="hidden-sm-down" jhiTranslate="gatewayApp.coreTag.home.createLabel">
             Create new Tag
             </span>
-        </button>
-    </h2>
+                </button>
+            </h2>
+        </div>
+    </div>
     <jhi-alert></jhi-alert>
     <div class="row">
         <div class="col-sm-12">
             <form name="searchForm" class="form-inline">
-                <div class="input-group w-100 mt-3">
+                <div class="input-group w-100 mt-3 justify-content-end">
                     <mat-form-field class="col-md-3">
                         <input matInput
                                type="text"
                                [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch"
                                placeholder="{{ 'gatewayApp.coreTag.home.search' | translate }}">
                     </mat-form-field>
-                    <button mat-icon-button mat-raised-button class="margin-r-10"
+                    <button mat-icon-button mat-raised-button class="mr-2"
                             (click)="search(currentSearch)">
                         <mat-icon>search</mat-icon>
                     </button>
                     <button mat-icon-button mat-raised-button color="warn"
-                        (click)="clear()" *ngIf="currentSearch">
+                            (click)="clear()" *ngIf="currentSearch">
                         <mat-icon class="white">delete_outline</mat-icon>
                     </button>
                 </div>
             </form>
         </div>
     </div>
-    <div class="table-responsive col-md-12" *ngIf="tags" jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-        <table mat-table [dataSource]="tags" class="mat-elevation-z8 shadow-table full-width alternate-color box-shadow-2">
-            <ng-container matColumnDef="name">
-                <th jhiSortBy="name" mat-header-cell *matHeaderCellDef> <span jhiTranslate="gatewayApp.coreTag.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon> </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-            <ng-container matColumnDef="slug">
-                <th jhiSortBy="slug" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.coreTag.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <td mat-cell *matCellDef="let element"> {{element.slug}} </td>
-            </ng-container>
-            <ng-container matColumnDef="description">
-                <th jhiSortBy="description" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.coreTag.description">Description</span><fa-icon [icon]="'sort'"></fa-icon> </th>
-                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-            </ng-container>
-            <ng-container matColumnDef="createdDate">
-                <th jhiSortBy="createdDate" mat-header-cell *matHeaderCellDef> <span jhiTranslate="gatewayApp.coreTag.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon> </th>
-                <td mat-cell *matCellDef="let element"> {{element.createdDate | date:'medium'}} </td>
-            </ng-container>
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef> Actions </th>
-                <td mat-cell *matCellDef="let element">
-                    <div class="action-button-container">
-                        <div [routerLink]="['/tag', element.id, 'view' ]">
-                            <fa-icon [icon]="'eye'"></fa-icon>
+    <div class="row">
+        <div class="table-responsive col-md-12" *ngIf="tags" jhiSort [(predicate)]="predicate" [(ascending)]="reverse"
+             [callback]="transition.bind(this)">
+            <table mat-table [dataSource]="tags"
+                   class="mat-elevation-z8 shadow-table full-width alternate-color box-shadow-2">
+                <ng-container matColumnDef="name">
+                    <th jhiSortBy="name" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.coreTag.name">Name</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}}</td>
+                </ng-container>
+                <ng-container matColumnDef="slug">
+                    <th jhiSortBy="slug" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.coreTag.slug">Slug</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.slug}}</td>
+                </ng-container>
+                <ng-container matColumnDef="description">
+                    <th jhiSortBy="description" mat-header-cell *matHeaderCellDef><span
+                        jhiTranslate="gatewayApp.coreTag.description">Description</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.description}}</td>
+                </ng-container>
+                <ng-container matColumnDef="createdDate">
+                    <th jhiSortBy="createdDate" mat-header-cell *matHeaderCellDef><span
+                        jhiTranslate="gatewayApp.coreTag.createdDate">Created Date</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.createdDate | date:'medium'}}</td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef class="action-column"> Actions</th>
+                    <td mat-cell *matCellDef="let element">
+                        <div class="action-button-container">
+                            <div [routerLink]="['/tag', element.id, 'view' ]">
+                                <fa-icon [icon]="'eye'"></fa-icon>
+                            </div>
+                            <div [routerLink]="['/tag', element.id, 'edit']">
+                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                            </div>
+                            <div [routerLink]="['/', { outlets: { popup: 'tag/'+ element.id + '/delete'} }]"
+                                 replaceUrl="true"
+                                 queryParamsHandling="merge">
+                                <fa-icon [icon]="'times'"></fa-icon>
+                            </div>
                         </div>
-                        <div [routerLink]="['/tag', element.id, 'edit']">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                        </div>
-                        <div [routerLink]="['/', { outlets: { popup: 'tag/'+ element.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                        </div>
-                    </div>
-                </td>
-            </ng-container>
+                    </td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <table class="table table-striped" *ngIf="false">
-            <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-            <th jhiSortBy="name"><span jhiTranslate="gatewayApp.coreTag.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreTag.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreTag.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <!--<th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreTag.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-            <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreTag.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <!--<th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreTag.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let tag of tags ;trackBy: trackId">
-                <!--<td><a [routerLink]="['/tag', tag.id, 'view' ]">{{tag.id}}</a></td>-->
-                <td>{{tag.name}}</td>
-                <td>{{tag.slug}}</td>
-                <td>{{tag.description}}</td>
-                <!--<td>{{tag.clientId}}</td>-->
-                <td>{{tag.createdDate | date:'medium'}}</td>
-                <!--<td>{{tag.lastUpdatedDate | date:'medium'}}</td>-->
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['/tag', tag.id, 'view' ]"
-                                class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/tag', tag.id, 'edit']"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'tag/'+ tag.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
     </div>
     <div *ngIf="tags && tags.length">
         <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
+            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5"
+                            [itemsPerPage]="itemsPerPage"></jhi-item-count>
         </div>
         <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"
+                            [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
         </div>
     </div>
 </div>
