added delete popup support for claim

--- a/src/main/webapp/app/entities/factcheck/claim/claim.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim.component.html
@@ -79,10 +79,11 @@
                             <div (click)="openClaimEditDialog(element)">
                                 <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             </div>
-                            <div [routerLink]="['/', { outlets: { popup: 'claim/'+ element.id + '/delete'} }]"
-                                 replaceUrl="true"
-                                 queryParamsHandling="merge">
-                                <fa-icon [icon]="'times'"></fa-icon>
+                            <div>
+                                <span (click)="openDialogPopUp(element)">
+                                    <fa-icon [icon]="'times'">
+                                    </fa-icon>
+                                </span>
                             </div>
                         </div>
                     </td>
